Required checkbox fix, form-horizontal css alignment fix (#422)
* Fix horizontal-form alignment issue

* fix required being checked in editor when it is set to false

--- a/demo/assets/css/form-builder.css
+++ b/demo/assets/css/form-builder.css
@@ -653,7 +653,7 @@ textarea.form-control {
   .frmb .prev-holder {
     display: block; }
     .frmb .prev-holder .form-group {
-      margin-bottom: 0; }
+      margin: 0; }
     .frmb .prev-holder .ql-editor {
       min-height: 125px; }
     .frmb .prev-holder .form-group > label:not([class='fb-checkbox-label']) {
