--- a/src/sass/_stage.scss
+++ b/src/sass/_stage.scss
@@ -268,7 +268,7 @@
     display: block;
 
     .form-group {
-      margin-bottom: 0;
+      margin: 0;
     }
 
     .ql-editor {
